[package]
name = "crustacean_facts"
version = "0.1.0"
authors = ["Jacob Smith <jacob.smith@slalom.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
clap = "2.33.3"
twilio = "0.1.3"

[dependencies.rusqlite]
version = "0.24.0"
features = ["bundled"]